--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,8 @@ img {
   vertical-align: bottom;
   line-height: 1.0em;
 }
-
+/*旧ナビバー*/
+/*
 .navbar{
     height:57px;
     max-width:2200px;
@@ -105,7 +106,15 @@ img {
     }
 
 }
+*/
 
+/*ハンバーガーメニュー作成に当たり変更、新ナビバー*/
+.navbar{
+   font-size:16px;
+}
+.navbar-nav li a{
+    margin-right: 15px;
+}
 
 .carousel-caption{
     background-color:rgba(255, 255, 255, 0.7);
@@ -231,6 +240,58 @@ img {
 .main_title_3_itaru{
     display:none;
 }
+.transformerSAGA{
+  position: relative;
+
+}
+.transformerSAGA_button{
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+}
+
+.transformerSAGA_div{
+  width: 22rem;
+  height: 20rem;
+}
+@media (max-width: 1100px){
+    .transformerSAGA_div{
+      width: 18rem;
+      height: 18rem;
+    }
+}
+@media (max-width: 900px){
+    .transformerSAGA_div{
+      width: 15rem;
+      height: 15rem;
+    }
+}
+@media (max-width: 800px){
+    .transformerSAGA_div{
+      width: 12rem;
+      height: 12rem;
+    }
+}
+@media (max-width: 700px){
+    .transformerSAGA_div{
+      width: 10rem;
+      height: 10rem;
+    }
+}
+@media (max-width: 600px){
+    .transformerSAGA_div{
+      width: 7rem;
+      height: 7rem;
+    }
+}
+@media (max-width: 500px){
+    .transformerSAGA_div{
+      width: 5.5rem;
+      height: 5.5rem;
+    }
+}
+
+
 @media (max-width: 960px){
     .carousel-caption{
     padding-top: 3vw;
@@ -371,7 +432,16 @@ img {
     display:block;
     transform: translateY(0px);
  }
+    .transformerSAGA_button{
+      position: absolute;
+      bottom: 7%;
+      right: 5%;
+    }
 
+    .transformerSAGA_div{
+      width: 8rem;
+      height: 8rem;
+    }
 }
 
 /*footer*/
@@ -1000,4 +1070,185 @@ html { font-size:80%}
   background-image: url(images/background_image.jpg);
   background-repeat: repeat;
   background-size:  2200px auto;
+}
+
+/* ----- 参加者の声 ----- */
+
+.voice-green{
+  height:300px;
+  background-image: url(images/voice/haikei_green.png);
+  background-repeat: repeat;
+  background-size:  1100px auto;
+}
+.voice-pink{
+  height:300px;
+  background-image: url(images/voice/haikei_pink.png);
+  background-repeat: repeat;
+  background-size:  1100px auto;
+}
+
+.fukidasi-img{
+  width:450px;
+  margin:20px 0 0 0;
+}
+.fukidasi-s-img{
+  display: none;
+}
+.fukidasikumo-img{
+  width:470px;
+  margin:18px 0 5px 0;
+}
+.voice_box{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 840px;
+  margin: 0 auto;
+}
+
+.voice-container {
+  position: relative;
+}
+
+.voice-text {
+  position: absolute;
+  top: 16%;
+  left: 10%;
+  width: 400px;
+}
+.voice-text-kumo {
+  position: absolute;
+  top: 23%;
+  left: 15%;
+  width: 330px;
+}
+.voice-top{
+  color:black;
+  font-size:28px;
+}
+.voice-top-main{
+  color:black;
+  font-size:20px;
+  padding-right:5px;
+  line-height: 1.3;
+}
+.voice-bottom{
+  color:black;
+  font-size:28px;
+  padding:0 5px 0 15px;
+  line-height: 1.3;
+}
+.voice-main{
+  font-size:18px;
+}
+.voice-personal{
+  font-size:16px;
+}
+
+.voice-box-chara {
+  width: 300px;
+  height: 300px;
+  /*border: 1px solid black;
+  box-sizing: border-box;*/
+  display: flex;
+  align-items: flex-end;
+}
+.voice_chara_img{
+  height:280px;
+}
+
+
+.voice-box-message{
+  width: 500px;
+  height: 300px;
+  /*border: 1px solid black;
+  box-sizing: border-box;*/
+}
+
+
+
+@media(max-width:819px){
+.voice-green{
+  height:630px;
+  background-image: url(images/voice/haikei_green.png);
+  background-repeat: repeat;
+  background-size:  1100px auto;
+}
+.voice-pink{
+  height:630px;
+  background-image: url(images/voice/haikei_pink.png);
+  background-repeat: repeat;
+  background-size:  1100px auto;
+}
+
+
+.fukidasi-img{
+  display: none;
+}
+.fukidasi-s-img{
+  display:block;
+  width:300px;
+  margin:0 auto;
+}
+.fukidasikumo-img{
+  display: none;
+}
+
+.voice-box-chara {
+  width: 450px;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.voice-box-message{
+  width: 380px;
+  height: 350px;
+    display: flex;
+  justify-content: center;
+  /*border: 1px solid black;
+  box-sizing: border-box;*/
+}
+
+.voice-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.voice-top-main{
+  padding-right:0px;
+}
+.voice-bottom{
+  padding-right:0px;
+}
+
+.voice-text {
+  max-width: 100%;
+  width:270px;
+  padding:0 0 0 40px;
+}
+.voice-text-kumo {
+  position: absolute;
+  top: 16%;
+  left: 10%;
+  max-width: 100%;
+  width:270px;
+  padding:0 0 0 40px;
+}
+.voice-main{
+  font-size:17px;
+}
+.voice-personal{
+  font-size:15px;
+}
+
+
+
+.voice-box-upper {
+  order: 1; /* Box 1の順序を設定 */
+}
+
+.voice-box-lower {
+  order: 2; /* Box 2の順序を設定 */
+}
 }
