--- a/static/style.css
+++ b/static/style.css
@@ -1091,6 +1091,10 @@ html { font-size:80%}
   width:450px;
   margin:20px 0 0 0;
 }
+.fukidasi-y-img{
+  width:450px;
+  margin:30px 0 0 0;
+}
 .fukidasi-s-img{
   display: none;
 }
@@ -1130,7 +1134,7 @@ html { font-size:80%}
   color:black;
   font-size:20px;
   padding-right:5px;
-  line-height: 1.3;
+  line-height: 1.1;
 }
 .voice-bottom{
   color:black;
@@ -1185,6 +1189,9 @@ html { font-size:80%}
 .fukidasi-img{
   display: none;
 }
+.fukidasi-y-img{
+  display: none;
+}
 .fukidasi-s-img{
   display:block;
   width:300px;
@@ -1217,29 +1224,33 @@ html { font-size:80%}
 }
 .voice-top-main{
   padding-right:0px;
+  line-height: 1.3;
 }
+
 .voice-bottom{
-  padding-right:0px;
+  padding:0 0 0 0;
 }
 
 .voice-text {
   max-width: 100%;
-  width:270px;
-  padding:0 0 0 40px;
+  width:280px;
+  top: 12%;
+  left: 40px;
+  padding:0 0 0 23px;
 }
 .voice-text-kumo {
   position: absolute;
-  top: 16%;
-  left: 10%;
+  top: 12%;
+  left: 40px;
   max-width: 100%;
-  width:270px;
-  padding:0 0 0 40px;
+  width:280px;
+  padding:0 0 0 23px;
 }
 .voice-main{
-  font-size:17px;
+  font-size:20px;
 }
 .voice-personal{
-  font-size:15px;
+  font-size:18px;
 }
 
 
@@ -1250,5 +1261,30 @@ html { font-size:80%}
 
 .voice-box-lower {
   order: 2; /* Box 2の順序を設定 */
+}
+}
+
+@media(max-width:400px){
+.voice-text {
+  padding:0 0 0 22px;
+}
+.voice-text-kumo {
+  padding:0 0 0 22px;
+}
+}
+@media(max-width:390px){
+.voice-text {
+  padding:0 0 0 15px;
+}
+.voice-text-kumo {
+  padding:0 0 0 15px;
+}
+}
+@media(max-width:380px){
+.voice-text {
+  padding:0 0 0 12px;
+}
+.voice-text-kumo {
+  padding:0 0 0 12px;
 }
 }
